--- a/bsconfig.json
+++ b/bsconfig.json
@@ -8,6 +8,10 @@
     },
     { "dir": "example", "type": "dev" }
   ],
+  "package-specs": {
+    "module": "commonjs",
+    "in-source": true
+  },
   "bs-dependencies": ["bs-webapi"],
   "suffix": ".bs.js",
   "refmt": 3
