--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world",
-    "pack": "webpack lib/js/example/example.bs.js -o lib/app.js --mode development",
-    "pack-start": "webpack -w lib/js/example/example.bs.js -o lib/app.js --mode development",
+    "pack": "webpack lib/js/example/example.js -o lib/app.js --mode development",
+    "pack-start": "webpack -w lib/js/example/example.js -o lib/app.js --mode development",
     "prepare": "npm link bs-platform"
   },
   "repository": {
